# scim-v2-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml  release.yml
src/: lib.rs
src/models/: enterprise_user.rs  errors.rs  group.rs  others.rs  resource_types.rs  scim_schema.rs  service_provider_config.rs  user.rs
src/utils/: error.rs
