[package]
name = "scim_v2"
version = "0.3.1"
edition = "2024"
authors = ["Dan Gericke <dan@shiftcontrol.io>"]
description = "A crate that provides utilities for working with the System for Cross-domain Identity Management (SCIM) version 2.0 protocol. (rfc7642, rfc7643, rfc7644)"
documentation = "https://docs.rs/scim_v2"
license = "MIT"
repository = "https://github.com/ShiftControl-io/scim-v2-rust"
rust-version = "1.85"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lib]
doc-scrape-examples = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
